# TalksAndStuff

./: .gitignore  README.md  TalksAndStuff.cabal  about.html  archive.html  index.html  index.md  shell.nix  site.hs  stack.yaml
css/: default.css  reveal.css  reveal.scss  slidy.css
css/print/: paper.css  pdf.css
pages/: Setting_up_Ghc_with_MSYS2.html  Setting_up_Ghc_with_MSYS2.md
posts/: 2014-05-12-A_Practical_Haskell_Retrospective_Using_Parsec_REST_and_Pandoc_to_Scrape_Jira.html  2014-05-12-A_Practical_Haskell_Retrospective_Using_Parsec_REST_and_Pandoc_to_Scrape_Jira.md
slides/: 2013-04-08-Introduction_to_Lua_(The_extensible_extension_language).html  2013-04-08-Introduction_to_Lua_(The_extensible_extension_language).md  2014-01-13-Intro_Typeclassopedia.html  2014-01-13-Intro_Typeclassopedia.lhs  2014-05-12-A_Practical_Haskell_Retrospective_Using_Parsec_REST_and_Pandoc_to_Scrape_Jira.html  2014-05-12-A_Practical_Haskell_Retrospective_Using_Parsec_REST_and_Pandoc_to_Scrape_Jira.md  2015-02-09-For_The_Purely_Lazy.html  2015-02-09-For_The_Purely_Lazy.md  2015-11-23-Exploring_Typed_Functional_Web_Applications_Part_1.html  2015-11-23-Exploring_Typed_Functional_Web_Applications_Part_1.md  2017-06-10-Adventures_with_the_purely_functional_OS_Nixos.md  2017-07-10-Adventures_with_the_purely_functional_OS_Nixos.html  2017-07-10-Adventures_with_the_purely_functional_OS_Nixos.md  2018-06-21-Adventures_with_the_purely_functional_OS_Nixos.html
templates/: archive.html  default.html  default_no_content.html  index.html  revealjs.html  slides.html  slidy.html
(+25 files in other folders)
