name:                TalksAndStuff
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/HanStolpo/TalksAndStuff#readme
author:              Handré Stolp
maintainer:          hanstolpo@gmail.com
copyright:           None
category:            NA
build-type:          Simple
cabal-version:       >=1.10


executable site
  hs-source-dirs:      ./
  main-is:             site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , hakyll >= 4.7 && < 4.8
                     , pandoc >= 1.15 && < 1.16
                     , pandoc-types >= 1.12 && < 1.13
                     , containers  >= 0.5 && < 0.6
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/HanStolpo/TalksAndStuff
